--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,5 +1,6 @@
-matplotlib>=3.3
-numpy>=1.19
-scikit-image>=0.17
-torch>=1.6
-torchvision>=0.7
+h5py==3.1.0
+matplotlib==3.3.4
+numpy==1.19.5
+scikit-image==0.17.2
+torch==1.6.0
+torchvision==0.7.0
